@@ -368,7 +368,7 @@ $.noty.defaults = {
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-										<a class="brand" href="javascript:SwitchLayout('Dashboard')"><h1>Domoticz</h1> <h2>V<!--#embed versionstr --></h2></a>
+										<a class="brand" href="javascript:SwitchLayout('Dashboard')"><h1>Domoticz</h1> <h2 id="appversion">V<!--#embed versionstr --></h2></a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li id="mDashboard"><a id="cDashboard" href="javascript:SwitchLayout('Dashboard')"><img src="images/desktop.png"> Dashboard</img></a></li>
