@@ -3,6 +3,7 @@ Version 1.0.xxx (April xxth 2013)
 - Implemented: Web Gui, sticky Notification (now only used when there is an update for the Raspberry Pi)
 - Fixed: ResetSecurityStatus json return status
 - Implemented: Option to display update check
+- Implemented: Utility sensors now display their usage value in large font
 
 Version 1.0.412 (April 1th 2013)
 - Fixed: Siren icon on dashboard
